# LLM-assisted-quantitative-research-pipeline

./: LICENSE  README.md  crypto_sentiment_pipeline_roadmap_v2.md  llm_dual_pipeline_roadmap.md  pyproject.toml
crypto_pipeline/: __init__.py  __main__.py
crypto_pipeline/alpha_registry/: __init__.py  holdout.py  models.py  registry.py
crypto_pipeline/ingestion/: __init__.py  cryptopanic.py  dedup.py  language.py  ohlcv.py  storage.py
crypto_pipeline/qr/: __init__.py  calibration.py  cluster.py  embedding.py  router.py  tagger.py  taxonomy.py  tools.py  windows.py
crypto_pipeline/schemas/: __init__.py  contracts.py
tests/: test_holdout.py  test_registry.py  test_tools.py
